[package]
name = "hmemu"
version = "0.1.0"
authors = ["Jun Kimura <junkxdev@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
hmc = { git = "https://github.com/bluele/hypermint", revision = "aad199e6537452a1e813b319615d22d57117fda3" }

[lib]
name = "hmemu"
crate-type = ["cdylib", "lib"]
