[package]
name = "core"
version = "0.1.0"
authors = ["Jun Kimura <junkxdev@gmail.com>"]
edition = "2018"
build = "build.rs"

[dependencies]
# hmc = { git = "https://github.com/bluele/hypermint", tag = "v0.4.1" 
hmcdk = { path = "../../../bluele/hypermint/hmcdk/lib" }

[lib]
crate-type = ["cdylib", "lib"]
