[package]
name = "first"
version = "0.1.0"
workspace = "../../"
authors = ["Jun Kimura <junkxdev@gmail.com>"]
edition = "2018"

[dependencies]
hmcdk = { path = "../../../../bluele/hypermint/hmcdk/lib" }
hmemu = { path = "../../lib" }
hmemu_codegen = { version = "0.1.0", path = "../../codegen" }

[lib]
# WARNING: If you want to compile this contract to wasm module, change this value to ["cdylib", "lib"]
crate-type = ["staticlib", "lib"]
